--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <img src="yt.png" alt="" class="yt">
                     <img src="twit.png" alt="" class="twit">
                     <img src="linkden.png" alt="" class="linkden">
+                    <img src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-and-shapes-3/177800/129-512.png" alt="" class="acc">
                 </li>
             </ul>
         </nav>
