--- a/index.html
+++ b/index.html
@@ -24,16 +24,19 @@
                         </a>
                     </div>
                 </li>
-                <li class="l3">
-                    <img src="insta.png" alt="" class="insta">
-                    <img src="fb.png" alt="" class="fb">
-                    <img src="owl.png" alt="" class="owl">
-                    <img src="whatsapp.png" alt="" class="whatsapp">
-                    <img src="yt.png" alt="" class="yt">
-                    <img src="twit.png" alt="" class="twit">
-                    <img src="linkden.png" alt="" class="linkden">
-                    <img src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-and-shapes-3/177800/129-512.png" alt="" class="acc">
-                </li>
+<li class="l3">
+    <img src="insta.png" alt="" class="insta">
+    <img src="fb.png" alt="" class="fb">
+    <img src="owl.png" alt="" class="owl">
+    <img src="whatsapp.png" alt="" class="whatsapp">
+    <img src="yt.png" alt="" class="yt">
+    <img src="twit.png" alt="" class="twit">
+    <img src="linkden.png" alt="" class="linkden">
+    <div class="account-wrapper">
+        <img src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-and-shapes-3/177800/129-512.png" alt="" class="acc">
+        <span class="tooltip">Account</span>
+    </div>
+</li>
             </ul>
         </nav>
         <nav class="first2">
