--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <img src="linkden.png" alt="" class="linkden">
     <div class="account-wrapper">
         <img src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-and-shapes-3/177800/129-512.png" alt="" class="acc">
-        <span class="tooltip">Account</span>
+        <a href="signup.html" class="tooltip">Signup</a>
     </div>
 </li>
             </ul>
