--- a/signup.html
+++ b/signup.html
@@ -247,7 +247,7 @@
             const email = document.getElementById("email").value;
             const password = document.getElementById("password").value;
 
-            const res = await fetch("http://localhost:3000/user/login", {
+            const res = await fetch("http://localhost:3000/login", {
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json",
