--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     <p class="pl1">3 Nights Kerala Tour: Munnar & Alleppey</p>
                     <img src="loco.png" alt="" class="loc1">
                     <p class="pl2">Kerala</p>
-                    <button type="submit" class="bn1" id="bko1" onclick="booking('3 Nights Kerala Tour : Munnar & Alleppey','Kerla','&#x20B9 17,250')">BOOK NOW</button>
+                    <button type="submit" class="bn1" id="bko1">BOOK NOW</button>
                     <p class="pl3">Starting From
                         <span class="sp1">&#x20B9 17,250</span>
                     </p>
