--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul class="ul1">
                 <li class="l1">
                     <img src="phone.png" alt="" class="ph">
-                    <p class="ph1">+91 8111864888 (IN)</p>
+                    <p class="ph1">+91 9974712262 (IN)</p>
                 </li>
                 <li class="l2">
                     <div class="wh">
@@ -92,7 +92,7 @@
                     <p class="pg5">REVIEWS</p>
                 </a>
                 <a href="#">
-                    <p class="pg6">+91 8111864888 (IN)</p>
+                    <p class="pg6">+91 9974712262 (IN)</p>
                 </a>
                 <button class="con4" type="submit">
                     CONTACT US
@@ -562,8 +562,8 @@
             <div class="sw3">
                 <h1 class="title3">Contact Us</h1>
                 <img src="phone2.png" alt="" class="phone2">
-                <p class="as5" id="son5">+91 999 580 9006</p>
-                <p class="as6">+91 8111 864888</p>
+                <p class="as5" id="son5">+91 9974712262</p>
+                <p class="as6">+91 9974712262</p>
                 <img src="gmail.png" alt="" class="gmail2">
                 <p class="as7" id="son6">tour@ttpkerala.com</p>
                 <img src="loco2.png" alt="" class="loco2">
